added basic apis for performances
